--- a/.tekton/push.yaml
+++ b/.tekton/push.yaml
@@ -13,7 +13,7 @@ spec:
     - name: revision
       value: "{{revision}}"
     - name: output-image
-      value: 'quay.io/redhat-appstudio/application-service:{{revision}}'
+      value: 'quay.io/ejegrova/application-service:{{revision}}'
     - name: path-context
       value: .
     - name: dockerfile
@@ -30,3 +30,4 @@ spec:
           resources:
             requests:
               storage: 200Mi
+# commen
